--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -60,11 +60,11 @@
       "application/vnd.holoviews_exec.v0+json": "",
       "text/html": [
        "<div id='p1002'>\n",
-       "  <div id=\"cb2e5fe5-f188-400c-9f2b-d96eefc2de83\" data-root-id=\"p1002\" style=\"display: contents;\"></div>\n",
+       "  <div id=\"cab836f7-c073-4bc9-a4f6-3532b17afd95\" data-root-id=\"p1002\" style=\"display: contents;\"></div>\n",
        "</div>\n",
        "<script type=\"application/javascript\">(function(root) {\n",
-       "  var docs_json = {\"838b886a-79cc-473c-a913-f09bfc646e70\":{\"version\":\"3.4.1\",\"title\":\"Bokeh Application\",\"roots\":[{\"type\":\"object\",\"name\":\"panel.models.browser.BrowserInfo\",\"id\":\"p1002\"},{\"type\":\"object\",\"name\":\"panel.models.comm_manager.CommManager\",\"id\":\"p1003\",\"attributes\":{\"plot_id\":\"p1002\",\"comm_id\":\"4b5d4cf66302409ca4e74e264ba230fb\",\"client_comm_id\":\"f9d246a85d6f4e3cb7b5b0c83483b640\"}}],\"defs\":[{\"type\":\"model\",\"name\":\"ReactiveHTML1\"},{\"type\":\"model\",\"name\":\"FlexBox1\",\"properties\":[{\"name\":\"align_content\",\"kind\":\"Any\",\"default\":\"flex-start\"},{\"name\":\"align_items\",\"kind\":\"Any\",\"default\":\"flex-start\"},{\"name\":\"flex_direction\",\"kind\":\"Any\",\"default\":\"row\"},{\"name\":\"flex_wrap\",\"kind\":\"Any\",\"default\":\"wrap\"},{\"name\":\"gap\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"justify_content\",\"kind\":\"Any\",\"default\":\"flex-start\"}]},{\"type\":\"model\",\"name\":\"FloatPanel1\",\"properties\":[{\"name\":\"config\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}},{\"name\":\"contained\",\"kind\":\"Any\",\"default\":true},{\"name\":\"position\",\"kind\":\"Any\",\"default\":\"right-top\"},{\"name\":\"offsetx\",\"kind\":\"Any\",\"default\":null},{\"name\":\"offsety\",\"kind\":\"Any\",\"default\":null},{\"name\":\"theme\",\"kind\":\"Any\",\"default\":\"primary\"},{\"name\":\"status\",\"kind\":\"Any\",\"default\":\"normalized\"}]},{\"type\":\"model\",\"name\":\"GridStack1\",\"properties\":[{\"name\":\"mode\",\"kind\":\"Any\",\"default\":\"warn\"},{\"name\":\"ncols\",\"kind\":\"Any\",\"default\":null},{\"name\":\"nrows\",\"kind\":\"Any\",\"default\":null},{\"name\":\"allow_resize\",\"kind\":\"Any\",\"default\":true},{\"name\":\"allow_drag\",\"kind\":\"Any\",\"default\":true},{\"name\":\"state\",\"kind\":\"Any\",\"default\":[]}]},{\"type\":\"model\",\"name\":\"drag1\",\"properties\":[{\"name\":\"slider_width\",\"kind\":\"Any\",\"default\":5},{\"name\":\"slider_color\",\"kind\":\"Any\",\"default\":\"black\"},{\"name\":\"value\",\"kind\":\"Any\",\"default\":50}]},{\"type\":\"model\",\"name\":\"click1\",\"properties\":[{\"name\":\"terminal_output\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"debug_name\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"clears\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"FastWrapper1\",\"properties\":[{\"name\":\"object\",\"kind\":\"Any\",\"default\":null},{\"name\":\"style\",\"kind\":\"Any\",\"default\":null}]},{\"type\":\"model\",\"name\":\"NotificationAreaBase1\",\"properties\":[{\"name\":\"js_events\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}},{\"name\":\"position\",\"kind\":\"Any\",\"default\":\"bottom-right\"},{\"name\":\"_clear\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"NotificationArea1\",\"properties\":[{\"name\":\"js_events\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}},{\"name\":\"notifications\",\"kind\":\"Any\",\"default\":[]},{\"name\":\"position\",\"kind\":\"Any\",\"default\":\"bottom-right\"},{\"name\":\"_clear\",\"kind\":\"Any\",\"default\":0},{\"name\":\"types\",\"kind\":\"Any\",\"default\":[{\"type\":\"map\",\"entries\":[[\"type\",\"warning\"],[\"background\",\"#ffc107\"],[\"icon\",{\"type\":\"map\",\"entries\":[[\"className\",\"fas fa-exclamation-triangle\"],[\"tagName\",\"i\"],[\"color\",\"white\"]]}]]},{\"type\":\"map\",\"entries\":[[\"type\",\"info\"],[\"background\",\"#007bff\"],[\"icon\",{\"type\":\"map\",\"entries\":[[\"className\",\"fas fa-info-circle\"],[\"tagName\",\"i\"],[\"color\",\"white\"]]}]]}]}]},{\"type\":\"model\",\"name\":\"Notification\",\"properties\":[{\"name\":\"background\",\"kind\":\"Any\",\"default\":null},{\"name\":\"duration\",\"kind\":\"Any\",\"default\":3000},{\"name\":\"icon\",\"kind\":\"Any\",\"default\":null},{\"name\":\"message\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"notification_type\",\"kind\":\"Any\",\"default\":null},{\"name\":\"_destroyed\",\"kind\":\"Any\",\"default\":false}]},{\"type\":\"model\",\"name\":\"TemplateActions1\",\"properties\":[{\"name\":\"open_modal\",\"kind\":\"Any\",\"default\":0},{\"name\":\"close_modal\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"BootstrapTemplateActions1\",\"properties\":[{\"name\":\"open_modal\",\"kind\":\"Any\",\"default\":0},{\"name\":\"close_modal\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"TemplateEditor1\",\"properties\":[{\"name\":\"layout\",\"kind\":\"Any\",\"default\":[]}]},{\"type\":\"model\",\"name\":\"MaterialTemplateActions1\",\"properties\":[{\"name\":\"open_modal\",\"kind\":\"Any\",\"default\":0},{\"name\":\"close_modal\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"copy_to_clipboard1\",\"properties\":[{\"name\":\"fill\",\"kind\":\"Any\",\"default\":\"none\"},{\"name\":\"value\",\"kind\":\"Any\",\"default\":null}]}]}};\n",
-       "  var render_items = [{\"docid\":\"838b886a-79cc-473c-a913-f09bfc646e70\",\"roots\":{\"p1002\":\"cb2e5fe5-f188-400c-9f2b-d96eefc2de83\"},\"root_ids\":[\"p1002\"]}];\n",
+       "  var docs_json = {\"5efd230e-598d-43f0-b4fa-49350d6bbeb1\":{\"version\":\"3.4.1\",\"title\":\"Bokeh Application\",\"roots\":[{\"type\":\"object\",\"name\":\"panel.models.browser.BrowserInfo\",\"id\":\"p1002\"},{\"type\":\"object\",\"name\":\"panel.models.comm_manager.CommManager\",\"id\":\"p1003\",\"attributes\":{\"plot_id\":\"p1002\",\"comm_id\":\"e74206f42e624ae784624b4241ed7c30\",\"client_comm_id\":\"dc14edf176c847aa82b4590a82111248\"}}],\"defs\":[{\"type\":\"model\",\"name\":\"ReactiveHTML1\"},{\"type\":\"model\",\"name\":\"FlexBox1\",\"properties\":[{\"name\":\"align_content\",\"kind\":\"Any\",\"default\":\"flex-start\"},{\"name\":\"align_items\",\"kind\":\"Any\",\"default\":\"flex-start\"},{\"name\":\"flex_direction\",\"kind\":\"Any\",\"default\":\"row\"},{\"name\":\"flex_wrap\",\"kind\":\"Any\",\"default\":\"wrap\"},{\"name\":\"gap\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"justify_content\",\"kind\":\"Any\",\"default\":\"flex-start\"}]},{\"type\":\"model\",\"name\":\"FloatPanel1\",\"properties\":[{\"name\":\"config\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}},{\"name\":\"contained\",\"kind\":\"Any\",\"default\":true},{\"name\":\"position\",\"kind\":\"Any\",\"default\":\"right-top\"},{\"name\":\"offsetx\",\"kind\":\"Any\",\"default\":null},{\"name\":\"offsety\",\"kind\":\"Any\",\"default\":null},{\"name\":\"theme\",\"kind\":\"Any\",\"default\":\"primary\"},{\"name\":\"status\",\"kind\":\"Any\",\"default\":\"normalized\"}]},{\"type\":\"model\",\"name\":\"GridStack1\",\"properties\":[{\"name\":\"mode\",\"kind\":\"Any\",\"default\":\"warn\"},{\"name\":\"ncols\",\"kind\":\"Any\",\"default\":null},{\"name\":\"nrows\",\"kind\":\"Any\",\"default\":null},{\"name\":\"allow_resize\",\"kind\":\"Any\",\"default\":true},{\"name\":\"allow_drag\",\"kind\":\"Any\",\"default\":true},{\"name\":\"state\",\"kind\":\"Any\",\"default\":[]}]},{\"type\":\"model\",\"name\":\"drag1\",\"properties\":[{\"name\":\"slider_width\",\"kind\":\"Any\",\"default\":5},{\"name\":\"slider_color\",\"kind\":\"Any\",\"default\":\"black\"},{\"name\":\"value\",\"kind\":\"Any\",\"default\":50}]},{\"type\":\"model\",\"name\":\"click1\",\"properties\":[{\"name\":\"terminal_output\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"debug_name\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"clears\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"FastWrapper1\",\"properties\":[{\"name\":\"object\",\"kind\":\"Any\",\"default\":null},{\"name\":\"style\",\"kind\":\"Any\",\"default\":null}]},{\"type\":\"model\",\"name\":\"NotificationAreaBase1\",\"properties\":[{\"name\":\"js_events\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}},{\"name\":\"position\",\"kind\":\"Any\",\"default\":\"bottom-right\"},{\"name\":\"_clear\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"NotificationArea1\",\"properties\":[{\"name\":\"js_events\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}},{\"name\":\"notifications\",\"kind\":\"Any\",\"default\":[]},{\"name\":\"position\",\"kind\":\"Any\",\"default\":\"bottom-right\"},{\"name\":\"_clear\",\"kind\":\"Any\",\"default\":0},{\"name\":\"types\",\"kind\":\"Any\",\"default\":[{\"type\":\"map\",\"entries\":[[\"type\",\"warning\"],[\"background\",\"#ffc107\"],[\"icon\",{\"type\":\"map\",\"entries\":[[\"className\",\"fas fa-exclamation-triangle\"],[\"tagName\",\"i\"],[\"color\",\"white\"]]}]]},{\"type\":\"map\",\"entries\":[[\"type\",\"info\"],[\"background\",\"#007bff\"],[\"icon\",{\"type\":\"map\",\"entries\":[[\"className\",\"fas fa-info-circle\"],[\"tagName\",\"i\"],[\"color\",\"white\"]]}]]}]}]},{\"type\":\"model\",\"name\":\"Notification\",\"properties\":[{\"name\":\"background\",\"kind\":\"Any\",\"default\":null},{\"name\":\"duration\",\"kind\":\"Any\",\"default\":3000},{\"name\":\"icon\",\"kind\":\"Any\",\"default\":null},{\"name\":\"message\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"notification_type\",\"kind\":\"Any\",\"default\":null},{\"name\":\"_destroyed\",\"kind\":\"Any\",\"default\":false}]},{\"type\":\"model\",\"name\":\"TemplateActions1\",\"properties\":[{\"name\":\"open_modal\",\"kind\":\"Any\",\"default\":0},{\"name\":\"close_modal\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"BootstrapTemplateActions1\",\"properties\":[{\"name\":\"open_modal\",\"kind\":\"Any\",\"default\":0},{\"name\":\"close_modal\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"TemplateEditor1\",\"properties\":[{\"name\":\"layout\",\"kind\":\"Any\",\"default\":[]}]},{\"type\":\"model\",\"name\":\"MaterialTemplateActions1\",\"properties\":[{\"name\":\"open_modal\",\"kind\":\"Any\",\"default\":0},{\"name\":\"close_modal\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"copy_to_clipboard1\",\"properties\":[{\"name\":\"fill\",\"kind\":\"Any\",\"default\":\"none\"},{\"name\":\"value\",\"kind\":\"Any\",\"default\":null}]}]}};\n",
+       "  var render_items = [{\"docid\":\"5efd230e-598d-43f0-b4fa-49350d6bbeb1\",\"roots\":{\"p1002\":\"cab836f7-c073-4bc9-a4f6-3532b17afd95\"},\"root_ids\":[\"p1002\"]}];\n",
        "  var docs = Object.values(docs_json)\n",
        "  if (!docs) {\n",
        "    return\n",
@@ -191,86 +191,86 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>kerikeri</td>\n",
-       "      <td>-35.2268</td>\n",
-       "      <td>173.9474</td>\n",
-       "      <td>14.39</td>\n",
-       "      <td>90</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0.98</td>\n",
-       "      <td>NZ</td>\n",
-       "      <td>1718607765</td>\n",
+       "      <td>labasa</td>\n",
+       "      <td>-16.4167</td>\n",
+       "      <td>179.3833</td>\n",
+       "      <td>301.51</td>\n",
+       "      <td>66</td>\n",
+       "      <td>37</td>\n",
+       "      <td>2.46</td>\n",
+       "      <td>FJ</td>\n",
+       "      <td>2024-09-21 17:08:39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>ginir</td>\n",
-       "      <td>7.1333</td>\n",
-       "      <td>40.7000</td>\n",
-       "      <td>22.08</td>\n",
-       "      <td>47</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1.53</td>\n",
-       "      <td>ET</td>\n",
-       "      <td>1718607742</td>\n",
+       "      <td>port-aux-francais</td>\n",
+       "      <td>-49.3500</td>\n",
+       "      <td>70.2167</td>\n",
+       "      <td>274.84</td>\n",
+       "      <td>65</td>\n",
+       "      <td>77</td>\n",
+       "      <td>16.10</td>\n",
+       "      <td>TF</td>\n",
+       "      <td>2024-09-21 17:08:40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>margaret river</td>\n",
-       "      <td>-33.9500</td>\n",
-       "      <td>115.0667</td>\n",
-       "      <td>15.44</td>\n",
-       "      <td>67</td>\n",
-       "      <td>60</td>\n",
-       "      <td>3.76</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>1718607768</td>\n",
+       "      <td>acajutla</td>\n",
+       "      <td>13.5928</td>\n",
+       "      <td>-89.8275</td>\n",
+       "      <td>299.98</td>\n",
+       "      <td>80</td>\n",
+       "      <td>95</td>\n",
+       "      <td>1.15</td>\n",
+       "      <td>SV</td>\n",
+       "      <td>2024-09-21 17:08:41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>bam</td>\n",
-       "      <td>29.1060</td>\n",
-       "      <td>58.3570</td>\n",
-       "      <td>38.66</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.82</td>\n",
-       "      <td>IR</td>\n",
-       "      <td>1718607769</td>\n",
+       "      <td>udachny</td>\n",
+       "      <td>66.4167</td>\n",
+       "      <td>112.4000</td>\n",
+       "      <td>269.47</td>\n",
+       "      <td>90</td>\n",
+       "      <td>71</td>\n",
+       "      <td>1.05</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>2024-09-21 17:08:42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>marrakesh</td>\n",
-       "      <td>31.6315</td>\n",
-       "      <td>-8.0083</td>\n",
-       "      <td>17.04</td>\n",
-       "      <td>72</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.09</td>\n",
-       "      <td>MA</td>\n",
-       "      <td>1718607770</td>\n",
+       "      <td>ta`u</td>\n",
+       "      <td>-14.2336</td>\n",
+       "      <td>-169.5144</td>\n",
+       "      <td>299.98</td>\n",
+       "      <td>82</td>\n",
+       "      <td>29</td>\n",
+       "      <td>7.90</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>2024-09-21 17:08:43</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   City_ID            City      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
-       "0        0        kerikeri -35.2268  173.9474     14.39        90         100   \n",
-       "1        1           ginir   7.1333   40.7000     22.08        47         100   \n",
-       "2        2  margaret river -33.9500  115.0667     15.44        67          60   \n",
-       "3        3             bam  29.1060   58.3570     38.66        10           0   \n",
-       "4        4       marrakesh  31.6315   -8.0083     17.04        72           0   \n",
+       "   City_ID               City      Lat       Lng  Max Temp  Humidity  \\\n",
+       "0        0             labasa -16.4167  179.3833    301.51        66   \n",
+       "1        1  port-aux-francais -49.3500   70.2167    274.84        65   \n",
+       "2        2           acajutla  13.5928  -89.8275    299.98        80   \n",
+       "3        3            udachny  66.4167  112.4000    269.47        90   \n",
+       "4        4               ta`u -14.2336 -169.5144    299.98        82   \n",
        "\n",
-       "   Wind Speed Country        Date  \n",
-       "0        0.98      NZ  1718607765  \n",
-       "1        1.53      ET  1718607742  \n",
-       "2        3.76      AU  1718607768  \n",
-       "3        7.82      IR  1718607769  \n",
-       "4        3.09      MA  1718607770  "
+       "   Cloudiness  Wind Speed Country                 Date  \n",
+       "0          37        2.46      FJ  2024-09-21 17:08:39  \n",
+       "1          77       16.10      TF  2024-09-21 17:08:40  \n",
+       "2          95        1.15      SV  2024-09-21 17:08:41  \n",
+       "3          71        1.05      RU  2024-09-21 17:08:42  \n",
+       "4          29        7.90      AS  2024-09-21 17:08:43  "
       ]
      },
      "execution_count": 2,
@@ -1532,7 +1532,7 @@
   "kernelspec": {
    "display_name": "new_env",
    "language": "python",
-   "name": "new_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
